# project-template

./: .env.example  A360_INTEGRATION_STRATEGY.md  AI_ACCELERATION_STRATEGY.md  COLLABORATOR-ACCESS-GUIDE.md  DEPLOYMENT_CONFIG.json  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  GITHUB_INTEGRATION_ACCELERATORS.md  INTEGRATION_WORK_BREAKDOWN_ANALYSIS.md  IOS_DIRECT_ZENOTI_INTEGRATION.md  KERAGON_INTEGRATION_STRATEGY.md  MEDPLUM_ANALYSIS_FOR_A360.md  PROJECT_HUB_README.md  QUICK_REFERENCE.md  README-base.md.template  README.md  SETUP.md.template  SETUP_GUIDE.md  SIMPLE_PATIENT_SYNC_APPROACHES.md  STREAMLIT_DEPLOYMENT.md  TRANSCRIPT_TESTER_README.md  WARP.md  ai_processor.py  create_tables.py  database.py  database_schema.sql  database_setup_manual.sql  deploy_app.bat  file_processors.py  ios-progress.md  main_app.py  project.json  requirements.txt  sample_transcript.txt  setup_complete_database.py  setup_database.py  simple_app.py  start_app.bat  streamlit_app.py  test_local.bat  (+3 more)
.streamlit/: config.toml  secrets.toml
a360-data-lake/: .coverage  LAKEFS_AWS_DEPLOYMENT_GUIDE.md  README.md  pyproject.toml
a360-data-lake/.github/workflows/: README.md  cdk-diff-deploy.yaml  dagster-cloud-deploy.yaml  dev-build-and-deploy.yaml
a360-data-lake/consultation_pipeline/lambda/object_lambda_redactor/: requirements.txt
a360-data-lake/dagster/: .dockerignore  .gitignore  Dockerfile  README.md  dagster_cloud_template.yaml  pyproject.toml  repository.py
a360-data-lake/dagster/defs/aws/: resources.py  utils.py
a360-data-lake/dagster/defs/consultation_pipeline/: __init__.py  pipeline_factory.py  resources.py
a360-data-lake/dagster/defs/lakefs/: __init__.py  hooks.py  lakefs_aws_resources.py  resources.py
a360-data-lake/dagster/defs/podcast/: pipeline_factory.py  resources.py  utils.py
a360-data-lake/dagster/utils/: audio_processing.py
a360-data-lake/dagster_tests/: test_consultation_pipeline.py
a360-data-lake/infra/: README.md  __init__.py  app.py  cdk.context.json  cdk.json  deploy-dagster-code.sh  package-lock.json  ruff_analysis.json
a360-data-lake/infra/common/: constraints.txt
a360-data-lake/infra/consultation_pipeline/: __init__.py  consultation_medallion_stack.py  consultation_pipeline_factory.py  object_lambda_stack.py
a360-data-lake/infra/dagster/: __init__.py  consultation_pipeline_stack.py
a360-data-lake/infra/lakefs/: audit_stack.py  deploy-lakefs-aws.py  lakefs_stack.py  monitoring_stack.py  operations_stack.py
a360-data-lake/infra/lakefs/dagster_lakefs_integration/: lakefs_assets.py  lakefs_config.yaml  lakefs_resource.py
a360-data-lake/infra/lakefs/lakefs-config/: config.yaml
a360-data-lake/infra/podcast_transcription_pipeline/: __init__.py  podcast_transcription_medalion_stack.py
a360-data-lake/infra/shared/: __init__.py  iam_constructs.py  lambda_constructs.py  s3_constructs.py
a360-data-lake/infra/stacks/: component.py
a360-data-lake/infra/stacks/access/: ram_datalake_permissions.py
a360-data-lake/infra/stacks/catalog/: glue_datalake_catalog.py
a360-data-lake/infra/stacks/cicd/: github_oidc_role_stack.py
a360-data-lake/infra/stacks/common/: __init__.py  bedrock_models.py  eventbridge_pipe_construct.py  eventbridge_s3_rule_construct.py  lambda_construct.py  least_privilege_iam_construct.py  powertools_construct.py  queue_factory.py  utils.py
a360-data-lake/infra/stacks/configs/: account_config.py  database_config.py  table_config.py
a360-data-lake/infra/stacks/consultation_pipeline/: __init__.py  medallion_stack.py
a360-data-lake/infra/stacks/dagster/: README.md  __init__.py  agent_config.py  auto_scaling_stack.py  constants.py  ecs_stack.py  monitoring_stack.py  outputs.py  security_stack.py  service_discovery.py
a360-data-lake/infra/stacks/data/: ai_feedback_stack.py  consultation_storage_stack.py  macie_classification_stack.py  s3_intelligent_tiering_stack.py
a360-data-lake/infra/stacks/lakefs/: lakefs_aws_stack.py  repository_manager.py
a360-data-lake/infra/tests/: conftest.py  nag_suppressions.py  test_datalake_stack.py
a360-data-lake/notebooks/: README.md  pyproject.toml  test_cross_account_access.ipynb
a360-data-lake/spark/: Dockerfile  README.md  pyproject.toml
a360-data-lake/spark/src/: agg_trip_distance.py
a360-data-lake/tests/lakefs/: test_operations_lambdas.py  test_repository_manager.py
a360-data-lake/utils/: README.md  s3_access.py  s3_csv_preview.py  s3_sample_data_uploader.py  utils_README.md  utils_s3_csv_preview.py
a360-transcription-service-evaluator/: .dockerignore  .gitignore  AWS_COGNITO_RBAC_IMPLEMENTATION_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  pyproject.toml  pytest.ini
a360-transcription-service-evaluator/.archive/: app.py  cognito_rbac_stack.py  voice_actor_stack.py
a360-transcription-service-evaluator/backend/: database_schema.sql  database_schema_cognito.sql
a360-transcription-service-evaluator/backend/transcription_evaluator/: __init__.py
a360-transcription-service-evaluator/cdk/: README.md  app.py  cdk.context.json  cdk.json  outputs.json  requirements.txt  stack-policy.json  voice_actor_app.py
a360-transcription-service-evaluator/cdk/custom_constructs/: __init__.py  parameter_store_construct.py  powertools_lambda_construct.py
a360-transcription-service-evaluator/cdk/stacks/: api_stack.py  auth_stack.py  compute_stack.py  data_stack.py  frontend_stack.py  network_stack.py  transcription_evaluator_stack.py
a360-transcription-service-evaluator/frontend/: deploy.sh  package-lock.json  package.json  tailwind.config.js
a360-transcription-service-evaluator/frontend/public/: index.html
a360-transcription-service-evaluator/frontend/src/: App.css  App.tsx  aws-config.ts
a360-transcription-service-evaluator/scripts/: deploy.sh  init_database.py  package_lambda.sh
a360-transcription-service-evaluator/tests/: README.md  conftest.py  test_api_integration.py  test_basic_functionality.py  test_cli.py  test_cognito_assignment_service.py  test_cognito_user_service.py  test_configuration.py  test_e2e_workflows.py  test_main_api.py  test_storage.py  test_text_to_speech.py
(+384 files in other folders)
