[project]
name = "a360-data-lake-notebooks"
version = "0.1.0"
description = "Jupyter notebooks for A360 Data Lake operations and data exploration"
authors = [
    { name = "Shawn Albert", email = "shawn.albert@aesthetics360.com" }
]
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "boto3>=1.38.43",
    "botocore>=1.38.43",
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.4.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "s3fs>=0.4.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
 