[project]
name = "api-handler-lambda"
version = "1.0.0"
description = "API Handler Lambda for A360 Transcription Service Evaluator"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi>=0.116.0",
    "pydantic>=2.11.0",
    "pyjwt>=2.10.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]