[project]
name = "database-init-lambda"
version = "1.0.0"
description = "Database initialization Lambda for A360 Transcription Service Evaluator"
requires-python = ">=3.12,<3.13"

dependencies = [
    "urllib3==2.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]